--- a/assets/scss/projects.scss
+++ b/assets/scss/projects.scss
@@ -17,7 +17,6 @@ body {
     
                 .bar-full {
                     background: darken($primary, 5);
-                    transition: background 1s;
                 }
     
                 .heading span:first-child {
